videos: fixed player z-index. closes #707

--- a/app/assets/stylesheets/slider.sass
+++ b/app/assets/stylesheets/slider.sass
@@ -111,6 +111,8 @@ $slider-box-height: 22px
     -webkit-border-radius: 5px
     -moz-border-radius: 5px
     border-radius: 5px
+    a.player
+      z-index: 1
 
   &.info-box-visible
     .show-info
